# screenshot-llm

./: .gitignore  QUICKSTART.md  README.md  check_permissions.py  claude-BONUS.md  claude.md  find-my-monitor.py  fix-config.py  gtk-chat-gui.py  kill-all.sh  quick-button-test.py  requirements-minimal.txt  requirements-system.txt  requirements.txt  run.sh  screenshot-llm-gui.py  screenshot-llm.py  setup.py  start-screenshot-llm.py  tauri.conf.json  test-fixes.py  test-gtk-simple.py  test-gui-improvements.py  test-gui.py  test-markdown.py  test-mouse-devices.py  test-outputs.py  test-persistent-chat.py  test-phase1-improvements.py  test-rival3-buttons.py  zenity_display.py
.claude/: settings.local.json
ai-chat-shell/: .gitignore  CLAUDE.md  README.md  kill-tauri.sh  package.json
ai-chat-shell/src-tauri/: Cargo.toml  tauri.conf.json
ai-chat-shell/src-tauri/icons/: icon.icns
ai-chat-shell/src-tauri/src/: commands.rs  main.rs
config/: config.json  contexts.json
conversations/: conversation_2025-06-09_11-56-38.json  conversation_2025-06-09_12-01-04.json  conversation_2025-06-09_12-03-01.json  conversation_2025-06-09_12-06-54.json  conversation_2025-06-09_12-08-40.json  conversation_2025-06-09_12-13-06.json  conversation_2025-06-09_12-14-11.json  conversation_2025-06-09_12-17-10.json  conversation_2025-06-09_12-18-32.json  conversation_2025-06-09_12-20-29.json  conversation_2025-06-09_12-25-27.json  conversation_2025-06-09_12-28-09.json  conversation_2025-06-09_12-39-26.json  conversation_2025-06-09_12-39-37.json
lib/: chat_window.py  command_interface.py  (+18 more)
(+12 files in other folders)
