[package]
name = "ai-chat-shell"
version = "1.0.0"
description = "A modern cross-platform shell for AI chat services"
authors = ["AI Chat Shell Team"]
license = "MIT"
repository = ""
default-run = "ai-chat-shell"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "fs-write-file", "fs-read-file", "fs-create-dir"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
